# tournamentbot

./: .dockerignore  .env.example  Dockerfile  LICENSE  README.md  azure-pipelines.yml  pyproject.toml
src/: __init__.py
src/tournamentbot/: bot.py  server.py
src/tournamentbot/cogs/: tournament.py
src/tournamentbot/utils/: visualizer.py
